Improve styles for desktop (iteration 1)

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
   </header>
 
   <main id="maincontent">
-    <section>
+    <section id="sidePanel">
       <div class="filter-options">
         <h2>Filter Results</h2>
         <select id="neighborhoods-select" name="neighborhoods" onchange="updateRestaurants()">
@@ -27,8 +27,8 @@
         <select id="cuisines-select" name="cuisines" onchange="updateRestaurants()">
           <option value="all">All Cuisines</option>
         </select>
+        <ul id="restaurants-list"></ul>
       </div>
-      <ul id="restaurants-list"></ul>
     </section>
     <section id="map-container">
       <div id="map"></div>
