Set tabIndex for restaurant reviews article

--- a/restaurant.html
+++ b/restaurant.html
@@ -30,7 +30,7 @@
 
   <!-- Beginning main -->
   <main id="maincontent">
-    <article id="restaurantSidePanel">
+    <article id="restaurantSidePanel" tabindex="0">
       <!-- Beginning restaurant -->
       <section id="restaurant-container">
         <h2 id="restaurant-name"></h2>
