Improve a11y of restaurants list

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         <select id="cuisines-select" name="cuisines" onchange="updateRestaurants()">
           <option value="all">All Cuisines</option>
         </select>
-        <ul id="restaurants-list"></ul>
+        <ul id="restaurants-list" aria-label="Restaurants List" tabindex="0"></ul>
       </div>
     </section>
     <section id="map-container">
