--- a/index.html
+++ b/index.html
@@ -21,10 +21,12 @@
     <section id="sidePanel">
       <div class="filter-options">
         <h2>Filter Results</h2>
-        <select id="neighborhoods-select" name="neighborhoods" onchange="updateRestaurants()">
+        <select id="neighborhoods-select" name="neighborhoods" onchange="updateRestaurants()"
+          aria-label="Filter by neighborhood">
           <option value="all">All Neighborhoods</option>
         </select>
-        <select id="cuisines-select" name="cuisines" onchange="updateRestaurants()">
+        <select id="cuisines-select" name="cuisines" onchange="updateRestaurants()"
+          aria-label="Filter by cuisine">
           <option value="all">All Cuisines</option>
         </select>
         <ul id="restaurants-list" aria-label="Restaurants List" tabindex="0"></ul>
