Fix aria label for the map in restaurant reviews page

--- a/restaurant.html
+++ b/restaurant.html
@@ -48,7 +48,7 @@
     </article>
     <!-- Beginning map -->
     <section id="map-container">
-      <div id="map" role="application" aria-label="Map with restaurants locations"></div>
+      <div id="map" role="application" aria-label="Map with restaurant location"></div>
     </section>
     <!-- End map -->
   </main>
