--- a/restaurant.html
+++ b/restaurant.html
@@ -20,9 +20,12 @@
       <h1><a href="/" title="Home page">Restaurant Reviews</a></h1>
     </nav>
     <!-- Beginning breadcrumb -->
-    <ul id="breadcrumb">
+    <!-- <div id="breadcrumb" tabindex="0" aria-label="Breadcrumb">
+      <li role="link"><a href="/" title="Home page">Home</a></li>
+    </div> -->
+    <nav id="breadcrumb" aria-label="Breadcrumb" class="insideNav">
       <li><a href="/" title="Home page">Home</a></li>
-    </ul>
+    </nav>
     <!-- End breadcrumb -->
     <!-- End nav -->
   </header>
