Rename css class used for teh breadcrumb

--- a/restaurant.html
+++ b/restaurant.html
@@ -23,7 +23,7 @@
     <!-- <div id="breadcrumb" tabindex="0" aria-label="Breadcrumb">
       <li role="link"><a href="/" title="Home page">Home</a></li>
     </div> -->
-    <nav id="breadcrumb" aria-label="Breadcrumb" class="insideNav">
+    <nav id="breadcrumb" aria-label="Breadcrumb" class="inside-nav">
       <li><a href="/" title="Home page">Home</a></li>
     </nav>
     <!-- End breadcrumb -->
